--- a/Dockerfile_keepalived
+++ b/Dockerfile_keepalived
@@ -9,7 +9,7 @@ RUN yum install yum-plugin-downloadonly yum-utils device-mapper-persistent-data 
     && rm -rf /data/$SOFT_NAME \
     && rm -rf /var/cache/yum
     
-From scratch
+From alpine
 
 ENV SOFT_NAME=keepalived
 # copy file from the first stage
