--- a/Dockerfile_docker-ce
+++ b/Dockerfile_docker-ce
@@ -1,1 +1,12 @@
-
+FROM centos:7 AS builder
+RUN yum install yum-plugin-downloadonly yum-utils device-mapper-persistent-data lvm2 createrepo -y \
+    && yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo \ 
+    && yum install --downloadonly --downloaddir=/data/docker-ce docker-ce \
+    && createrepo /data/docker-ce \
+    && tar zcvf /data/docker-ce.tar.gz /data/docker-ce \
+    && rm -rf /data/docker-ce \
+    && rm -rf /var/cache/yum
+    
+From alpine
+# copy file from the first stage
+COPY --from=builder /data/docker-ce.tar.gz /docker-ce.tar.gz
