--- a/Dockerfile_chrome
+++ b/Dockerfile_chrome
@@ -5,7 +5,7 @@ ENV SOFT_NAME=chrome
 
 RUN yum install yum-plugin-downloadonly yum-utils device-mapper-persistent-data lvm2 createrepo -y \
     && yum install -y https://extras.getpagespeed.com/release-el7-latest.rpm \
-    && yum install -y --downloadonly --downloaddir=/data/$SOFT_NAME google-chrome-stable \
+    && yum install --downloadonly --downloaddir=/data/$SOFT_NAME google-chrome-stable \
     && createrepo /data/$SOFT_NAME \
     && tar zcvf /data/$SOFT_NAME.tar.gz /data/$SOFT_NAME \
     && rm -rf /data/$SOFT_NAME \
