--- a/Dockerfile_tools
+++ b/Dockerfile_tools
@@ -1,7 +1,7 @@
 FROM centos:7 AS builder
 
 RUN yum install yum-plugin-downloadonly yum-utils device-mapper-persistent-data lvm2 createrepo -y \
-    && yum install --downloadonly --downloaddir=/data/tools socat nfs-utils conntrack telnet \
+    && yum install --downloadonly --downloaddir=/data/tools socat nfs-utils conntrack telnet bash-completion \
     && createrepo /data/tools \
     && tar zcvf /data/tools.tar.gz /data/tools \
     && rm -rf /data/tools \
