--- a/Dockerfile_py36_el7
+++ b/Dockerfile_py36_el7
@@ -1,4 +1,6 @@
 FROM centos:7 AS builder
+
+ADD python/requirement.txt /requirement.txt
 RUN yum install yum-plugin-downloadonly yum-utils device-mapper-persistent-data lvm2 createrepo -y \
     && yum install --downloadonly --downloaddir=/data/python python36 python36-pip python36-devel \
     && createrepo /data/python \
@@ -6,7 +8,7 @@ RUN yum install yum-plugin-downloadonly yum-utils device-mapper-persistent-data 
     && rm -rf /data/python \
     && yum install -y python36 python36-pip python36-devel \
     && pip3 install --upgrade pip \
-    && pip3 download -d /data/pip -r python/requirement.txt \
+    && pip3 download -d /data/pip -r /requirement.txt \
     && tar zcvf /data/pip.tar.gz /data/pip \
     && rm -rf /var/cache/yum
    
@@ -14,4 +16,4 @@ From alpine
 # copy file from the first stage
 COPY --from=builder /data/python.tar.gz /python.tar.gz
 COPY --from=builder /data/pip.tar.gz /pip.tar.gz
-ADD python/requirement.txt /
+COPY --from=builder /requirement.txt /requirement.txt
